More changes to userAccordion UI Added new option to choose line stacking Added scrollbar for Highcharts navigator back in Fixed legend being hidden by default on first visit

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,7 @@ body {
 a:hover {
     text-decoration: underline;
 }
+
+.highcharts-scrolling::-webkit-scrollbar {
+    display: none !important;
+}
